# driver-intelligence

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  ci_test.db-shm  ci_test.db-wal  docker-compose.prod.yml  docker-compose.yml  f1di.db-shm  f1di.db-wal  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  post_race_flywheel.yml
data/calibration/: backtest_report.json  battery_best_params.json  circuit_wear_rates.json  cliff_projection_backtest.json  feedback_snapshot_20260610T155423Z.jsonl  fuel_best_params.json  meta_best_params.json  model_history.json  quality.json  safety_car_best_params.json  telemetry_best_params.json  thresholds.json  tire_best_params.json  undercut_backtest.json  weather_best_params.json
data/fixtures/: confidence_bands_eval.json  edge_cases_eval.json  real_replay_eval.json
data/knowledge/: abu_dhabi_ers.md  abu_dhabi_track.md  abu_dhabi_weather.md  austin_ers.md  austin_track.md  austin_weather.md  bahrain_ers.md  bahrain_track.md  bahrain_weather.md  baku_ers.md  baku_track.md  baku_weather.md  barcelona_ers.md  barcelona_track.md  barcelona_weather.md  budapest_ers.md  budapest_track.md  budapest_weather.md  imola_ers.md  imola_track.md  imola_weather.md  interlagos_ers.md  interlagos_track.md  interlagos_weather.md  jeddah_ers.md  jeddah_track.md  jeddah_weather.md  las_vegas_ers.md  las_vegas_track.md  las_vegas_weather.md  lusail_ers.md  lusail_track.md  lusail_weather.md  melbourne_ers.md  melbourne_track.md  melbourne_weather.md  mexico_city_ers.md  mexico_city_track.md  mexico_city_weather.md  miami_ers.md  (+32 more)
docs/: operations.md  postgres.md
frontend/: f1di.db-shm  f1di.db-wal  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  style.css
infra/: prometheus.yml  prometheus_alerts.yml
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_shadow_columns.py  003_raw_score.py  004_telemetry_and_judge_scores.py  005_feedback_uniqueness.py
scripts/: audit_synthetic_quality.py  backtest_cliff_projection.py  backtest_undercut.py  calibrate_wear_rates.py  capture_replay_fixture.py  fit_battery_classifier.py  fit_calibrator.py  fit_fuel_classifier.py  fit_meta_learner.py  fit_policy_thresholds.py  fit_safety_car_classifier.py  fit_telemetry_classifier.py  fit_thresholds.py  fit_tire_classifier.py  fit_weather_classifier.py  fit_weights.py  generate_synthetic_race.py  hetzner_setup.sh  ingest_fastf1_to_disk.py  ingest_openf1.py  label_race.py  replay_and_label.py  retrain_from_feedback.py  review_replay_fixture.py  run_llm_judge_eval.py  run_real_replay_gate.py  run_replay_regression.py  seed_flywheel.py  shadow_eval.py  smoketest_flywheel.py
tests/: conftest.py
tests/integration/: test_api_inference.py  test_flywheel_integration.py  test_meta_learner_activation.py
tests/regression/: test_api_smoke.py  test_ingesters.py  test_integration_modes.py  test_kafka_worker.py  test_ml_endpoints.py  test_orchestrator.py  test_outcome_labeler.py  test_real_replay_gate.py  test_recommendation_quality.py  test_replay_fixture_schema.py  test_retrieval_quality.py
tests/unit/: test_agents.py  test_auto_retrain.py  test_battery_weather_classifiers.py  test_cross_check.py  test_document_processor.py  test_explainer.py  test_fastf1_session_drivers.py  test_fuel_classifier.py  test_get_feature_importances.py  test_meta_learner.py  (+13 more)
(+137 files in other folders)
