[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-driver-intelligence"
version = "0.1.0"
description = "Real-time Formula One driver intelligence platform with simulation, RAG, agents, confidence and regression gates."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.4.0",
  "prometheus-client>=0.20.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.0",
  "orjson>=3.10.0",
  "rich>=13.7.0",
  "sqlalchemy>=2.0.50",
  "alembic>=1.18.4",
  "psycopg2-binary>=2.9",
  "python-multipart>=0.0.32",
  "qdrant-client>=1.9.0",
  "fastf1>=3.3.0",
]

[project.optional-dependencies]
rag = ["qdrant-client>=1.9.0", "sentence-transformers>=3.0.0"]
llm = ["anthropic>=0.40.0"]
sources = ["fastf1>=3.3.0"]
streaming = ["confluent-kafka>=2.4.0"]
regression = ["pytest>=8.2.0", "pytest-cov>=5.0.0"]
dev = ["ruff>=0.8.0"]
frontend = []
# Production persistence + migrations
persistence = ["sqlalchemy>=2.0.0", "alembic>=1.13.0", "aiosqlite>=0.20.0", "asyncpg>=0.29.0"]
# Analytical Text-to-SQL layer (DuckDB — open source, no server needed)
analytics = ["duckdb>=1.0.0"]
# Multi-modal document ingestion (PDF + OCR via Tesseract — fully open source)
ocr = ["pdfplumber>=0.11.0", "pytesseract>=0.3.10", "Pillow>=10.0.0"]
# Full production bundle
all = [
  "qdrant-client>=1.9.0", "sentence-transformers>=3.0.0",
  "anthropic>=0.40.0",
  "fastf1>=3.3.0",
  "sqlalchemy>=2.0.0", "alembic>=1.13.0", "aiosqlite>=0.20.0",
  "duckdb>=1.0.0",
  "pdfplumber>=0.11.0", "pytesseract>=0.3.10", "Pillow>=10.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
exclude = [".venv", ".uv-cache", "frontend/node_modules"]

[tool.setuptools.packages.find]
where = ["src"]
